- Fixed the Group Scheduler Filter picker to display in a column instead of a row on mobile viewports.

--- a/RockWeb/Styles/rock-components/pickers.less
+++ b/RockWeb/Styles/rock-components/pickers.less
@@ -8,6 +8,7 @@
   display: flex;
   gap: 6px;
   align-items: center;
+  flex-direction: column;
 }
 
 .picker {
